# seekcli

./: .gitignore  AGENT_ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  TODOs.md  _typos.toml  config.toml  deny.toml
.github/workflows/: build.yml
examples/benchmarks/: basic.json
examples/skills/doc_parser/: SKILL.md
examples/skills/doc_parser/scripts/: clip_to_png.sh  mineru_parse.sh
examples/skills/vision/: SKILL.md
examples/skills/vision/scripts/: vlm_describe.sh
src/: api.rs  benchmark.rs  commands.rs  completer.rs  config.rs  engine.rs  history.rs  main.rs  skills.rs  test.rs
src/agent/: compressor.rs  mod.rs  prompt.rs  recovery.rs  reminders.rs
src/api/: anthropic.rs  mod.rs  openai.rs
src/observability/: bench.rs  cost.rs  mod.rs  trace.rs
src/subagents/: registry.rs
src/tools/: approval.rs  edit.rs  fs.rs  meta.rs  mod.rs  offload.rs  path_security.rs  registry.rs  shell.rs
