[package]
edition = "2024"
license = "MIT"
name = "seekcli"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.4", features = ["derive"]}
colored = "2.0"
crossterm = "0.28"
futures-util = "0.3"
image = "0.24"
mime_guess = "2.0"
reqwest = {version = "0.11", features = ["json", "multipart", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
directories = "5.0"
uuid = { version = "1.0", features = ["v4"] }
rustyline = "12.0"
bytes = "1.11.1"
termimad = "0.34.1"
syntect = "5.3.0"
regex = "1.12.3"
toml = "0.8"
