[package]
edition = "2024"
license = "MIT"
name = "seekcli"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bytes = "1.11.1"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.4", features = ["derive"]}
colored = "2.0"
futures-util = "0.3"
indicatif = "0.17"
reqwest = {version = "0.12", features = ["json", "stream"]}
rustyline = "12.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
toml = "0.8"
uuid = {version = "1.0", features = ["v4"]}
